k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  labels:
    app: marketing
spec:
  replicas: 4
  selector:
    matchLabels:
      app: marketing
  template:
    metadata:
      labels:
        app: marketing
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
