k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-svc
spec:
  selector:
    app: marketing
  ports:
    - port: 80
      targetPort: 80
